Chain of Responsibility AKA "Filter"