@@ -132,14 +132,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-          <plugin>
+         <!-- <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-              <compilerArgs>--enable-preview</compilerArgs>
+              <compilerArgs>&#45;&#45;enable-preview</compilerArgs>
                 <release>15</release>
             </configuration>
-          </plugin>
+          </plugin>-->
         </plugins>
     </build>
 </project>
